<resources>
    <string name="app_name">Downloader</string>
    <string name="app_description">Download files from Internet</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">Download Details</string>
    <string name="downloading">Downloading</string>
    <string name="radio_glide_text">Glide</string>
    <string name="radio_loadadpp_text">LoadApp</string>
    <string name="radio_retrofit_text">Retrofit</string>
    <string name="radio_other_text">Other</string>
    <string name="radio_glide_desc">Download "Glide" project source as zip file</string>
    <string name="radio_loadadpp_desc">Download "Udacity Load App" project source as zip file</string>
    <string name="radio_retrofit_desc">Download "Retrofit" project source as zip file</string>
    <string name="radio_other_desc">Download your files</string>
    <string name="radio_glide_url">https://github.com/bumptech/glide</string>
    <string name="radio_loadadpp_url">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
    <string name="radio_retrofit_url">https://github.com/square/retrofit</string>
    <string name="ok">OK</string>
    <string name="failed">Failed</string>
    <string name="paused">Paused</string>
    <string name="pending">Pending</string>
    <string name="downloading_in_progress">Downloading…</string>
    <string name="success">Success</string>
    <string name="invalid_status_code">Invalid Status code</string>
    <string name="id">ID:</string>
    <string name="status">Status:</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="enter_file_url_here">Enter file url here</string>
    <string name="invalid_url_error">Invalid URL!! Please enter a valid URL to start download.</string>


</resources>
